# metasepi-design-website

./: .gitignore  Makefile  hakyll.hs  index.markdown  metasepi-design.cabal
css/: default.css
templates/: default.html
